src/pages/components/LevelBar/LevelBar.css
.small-skill-list {
  display: contents;
}

.green-experience-bar {
  display: flex;

  background: rgb(19, 19, 19);
  padding: 2px;
  border-radius: 2px;
}

.single-experience-bar {
  width: 15px;
  height: 20px;

  /* border: 1px solid rgb(255, 255, 255); */
}

.experience {
  position: relative;
}

#experience-level {
  font-size: 26px;

  position: absolute;
  top: -20px;
  right: -5px;

  pointer-events: none;
  text-shadow:
    -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
    1px 1px 0 #000;
  color: white;
}

